fixed shadow cut off of contact form

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,5 @@
 .FooterGroup{
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -7,12 +8,14 @@
     /* margin: 50px 0; */
     /* margin-bottom: 0; */
     /* height: 100%; */
-    height: 50px;
+    /* height: 60px; */
     padding: 20px;
     color: white;
     font-weight: lighter;
 
     position: absolute;
+    right: 0;
+    left: 0;
     bottom: 0;
     width: 100%;
 }
@@ -35,10 +38,23 @@
     margin: 0.3em;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+    .FooterGroup{
+        margin-top: 20px;
+    }
+  }
+
+@media (min-width: 481px) and (max-width: 767px) {
+    .FooterGroup{
+        margin-top: 20px;
+    }
+}
+
 @media (min-width: 1025px) {
    .FooterGroup{
         /* margin-top: 20px; */
-        /* height: 50px; */
+        /* height: 60px; */
+        margin: 0;
         padding: 25px;
    }
         
@@ -47,21 +63,13 @@
     }
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
-    .FooterGroup{
-        margin-top: 20px;
-    }
-  }
+
   
   /* 
     ##Device = Most of the Smartphones Mobiles (Portrait)
     ##Screen = B/w 320px to 479px
   */
   
-  @media (min-width: 320px) and (max-width: 480px) {
-    .FooterGroup{
-        margin-top: 20px;
-    }
-  }
+
 
 
